--- a/quotely-js/styles/style.css
+++ b/quotely-js/styles/style.css
@@ -3,12 +3,8 @@
 
 body {
   font-family: "Poppins", sans-serif;
-  /* light mode */
-  /* background: linear-gradient(to bottom, #ada996, #f2f2f2, #dbdbdb, #eaeaea); */
-
-  /* Dark mode */
-  background: linear-gradient(to left, #212831, #333c46, #212831);
-
+  /* default background as light mode */
+  background: linear-gradient(to left, #ada996, #f2f2f2, #dbdbdb, #ada996);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -30,12 +26,48 @@ body {
   margin-bottom: 30px;
 }
 
+.header {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  padding: 0 70px;
+}
+
+.modes {
+  display: flex;
+  gap: 8px;
+  margin-top: 20px;
+}
+
+.mode {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  cursor: pointer;
+  transition: 0.2s;
+  transition: ease;
+  border: 1.5px solid rgba(0, 0, 0, 0.3);
+  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.4);
+}
+
+.light-mode {
+  background: linear-gradient(to left, #ada996, #f2f2f2, #dbdbdb, #ada996);
+}
+
+.night-mode {
+  background: linear-gradient(to left, #212831, #515e6e, #212831);
+}
+
+.dark-mode {
+  background: linear-gradient(to left, #000000, #434343, #000000);
+}
+
 .cards {
   display: flex;
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
-  gap: 15px;
+  gap: 23px;
 }
 
 .add-quote {
