--- a/LocalStorage/styles/style.css
+++ b/LocalStorage/styles/style.css
@@ -47,7 +47,7 @@ button {
 .student-details {
   background-color: rgba(255, 255, 255, 0.3);
   width: 100%;
-  height: 427px;
+  max-height: 427px;
   border-radius: 8px;
   overflow-y: scroll;
   display: flex;
