--- a/quotely-js/styles/style.css
+++ b/quotely-js/styles/style.css
@@ -60,6 +60,8 @@ body {
 
 .dark-mode {
   background: linear-gradient(to left, #000000, #434343, #000000);
+  /* try this one u'll like it. it's better i think having white color for texts when bg is dark; */
+  /* color: #fff; */
 }
 
 .cards {
