--- a/quotely-js/styles/style.css
+++ b/quotely-js/styles/style.css
@@ -60,7 +60,7 @@ body {
 
 .dark-mode {
   background: linear-gradient(to left, #000000, #434343, #000000);
-  color: #fff;
+  color: #dadada;
 }
 
 .cards {
@@ -94,12 +94,52 @@ body {
   padding: 20px;
 }
 
-.card > img {
+#menu-icon {
+  cursor: pointer;
+  width: 10px;
+}
+
+.img-menu {
+  display: flex;
+  justify-content: space-between;
+  position: relative;
+}
+
+.img-menu > img {
   object-fit: cover;
   width: 150px;
   height: 150px;
   border-radius: 20px;
   margin-bottom: 20px;
+}
+
+.dropdown {
+  position: absolute;
+  right: 5px;
+  top: 18px;
+  padding: 2px;
+  border-radius: 2px;
+  visibility: hidden;
+  display: flex;
+  flex-direction: column;
+  gap: 1px;
+}
+
+li {
+  padding: 2px 4px;
+  width: 65px;
+  font-size: 12px;
+  cursor: pointer;
+  border-radius: 4px;
+  background-color: #ababab;
+}
+
+li:hover {
+  background-color: #d5d5d5;
+}
+
+.li-dark-mode {
+  color: #000;
 }
 
 .writer {
@@ -110,12 +150,13 @@ body {
 .writer-dark-mode {
   font-size: 14px;
   margin: 15px 0;
-  color: rgba(255, 255, 255, 0.7);
+  color: rgba(255, 255, 255, 0.6);
 }
 
 .add-quote-form {
   visibility: hidden;
   position: absolute;
+  position: fixed;
   background-color: rgba(26, 26, 26, 0.97);
   width: 390px;
   height: 400px;
@@ -165,7 +206,7 @@ input[type="file"]::file-selector-button {
 
 input[type="text"] {
   background-color: #fff;
-  padding: 6px 20px;
+  padding: 8px 20px;
   border-radius: 10px;
   color: #000;
 }
