--- a/quotely-js/styles/style.css
+++ b/quotely-js/styles/style.css
@@ -21,6 +21,11 @@ body {
   backdrop-filter: blur(15px);
 }
 
+::-webkit-scrollbar {
+  width: 0;
+  height: 0;
+}
+
 .logo {
   width: 200px;
   margin-bottom: 30px;
@@ -61,6 +66,12 @@ body {
 .dark-mode {
   background: linear-gradient(to left, #000000, #434343, #000000);
   color: #dadada;
+}
+
+.user {
+  margin-top: 20px;
+  font-size: 15px;
+  color: #7e7e7e;
 }
 
 .cards {
@@ -107,6 +118,7 @@ body {
 
 .img-menu > img {
   object-fit: cover;
+  object-position: center;
   width: 150px;
   height: 150px;
   border-radius: 20px;
@@ -151,6 +163,11 @@ li:hover {
   font-size: 14px;
   margin: 15px 0;
   color: rgba(255, 255, 255, 0.6);
+}
+
+.content {
+  max-height: 90px;
+  overflow-y: scroll;
 }
 
 .add-quote-form {
