--- a/quotely-js/styles/modes.css
+++ b/quotely-js/styles/modes.css
@@ -12,11 +12,11 @@
 }
 
 .mode-4 {
-  background: linear-gradient(to right, #4d3656, #9370a0, #4d3656);
+  background: linear-gradient(to right, #536976, #bbd2c5, #536976);
 }
 
 .mode-5 {
-  background: linear-gradient(to right, #355c7d, #6c5b7b);
+  background: linear-gradient(to right, #94716b, #b79891, #94716b);
 }
 
 .mode-6 {
