--- a/stopwatch/styles/style.css
+++ b/stopwatch/styles/style.css
@@ -2,7 +2,6 @@
 
 body {
   font-family: monospace;
-  background-color: #f5f5f5;
 }
 .container {
   height: 80vh;
@@ -11,6 +10,16 @@ body {
   align-items: center;
   justify-content: center;
   gap: 20px;
+}
+
+.dark-mode {
+  background-color: #222;
+  color: #ddd;
+}
+
+.light-mode {
+  background-color: #f5f5f5;
+  color: #000;
 }
 
 /* toggle switch */
@@ -23,7 +32,6 @@ body {
   background-color: #ddd;
   transition: 0.4s;
   border-radius: 34px;
-  /*  neomorphism */
   box-shadow: inset 0px 5px 10px rgba(44, 44, 44, 0.4),
     inset 0px -5px 10px rgba(255, 255, 255, 0.4);
 }
@@ -47,17 +55,6 @@ body {
   transition: 0.4s;
   border-radius: 50%;
 }
-/* end toggle switch */
-
-.dark-mode {
-  background-color: #222;
-  color: #ddd;
-}
-
-.light-mode {
-  background-color: #f5f5f5;
-  color: #000;
-}
 
 h1 {
   font-size: 40px;
@@ -68,7 +65,7 @@ h1 {
   height: 30px;
   border: 3px solid;
   border-radius: 12px;
-  color: #fff;
+  color: #f5f5f5;
   cursor: pointer;
   transition: 0.2s;
 }
@@ -77,10 +74,7 @@ h1 {
   background-color: #666;
 }
 
-.start-btn-click {
-  background-color: #31922a;
-}
-
+.start-btn-clicked,
 .timer-btn:hover {
   background-color: #31922a;
 }
