made a small change

--- a/tictactoe/styles/style.css
+++ b/tictactoe/styles/style.css
@@ -79,6 +79,11 @@ h1 {
   display: none;
 }
 
+.status-text {
+  font-size: 22px;
+  font-weight: 600;
+}
+
 #reset-button {
   background-color: rgba(255, 255, 255, 0.3);
   border: 1px solid;
