--- a/timer/styles/style.css
+++ b/timer/styles/style.css
@@ -26,7 +26,13 @@ body {
 }
 
 .time-display {
-  font-size: 75px;
+  display: flex;
+  gap: 35px;
+  padding: 10px;
+}
+
+.time-display .num {
+  font-size: 60px;
   color: #40c437;
 }
 
